Front mirror done.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         <div class="whiteTopPart">
             <span class="backPart"></span>
         </div>
-        <div class="windows"></div>
+        <div class="windows">
+            <div class="frontWindow"></div>
+        </div>
         <div class="blackPart">
             <span class="frontPeakCover"></span>
             <span class="backJoiningPart"></span>
