Back window also ready.

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
         <div class="whiteTopPart">
             <span class="backPart"></span>
         </div>
-        <div class="windows">
+        <div class="facingWindows">
             <div class="frontWindow"></div>
         </div>
+        <div class="backWindow"></div>
         <div class="blackPart">
             <span class="frontPeakCover"></span>
             <span class="backJoiningPart"></span>
